--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@apollo/client": "^3.3.16",
     "graphql": "^15.5.0",
     "next": "latest",
+    "next-images": "^1.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
