--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,18 +8,23 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.16",
-    "graphql": "^15.5.0",
+    "@apollo/client": "^3.3.20",
+    "@auth0/nextjs-auth0": "^1.4.2",
+    "@types/lodash": "^4.14.170",
+    "graphql": "^15.5.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "lodash": "^4.17.21",
     "next": "latest",
     "next-images": "^1.8.1",
+    "next-with-apollo": "^5.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/node": "^15.0.2",
-    "@types/react": "^17.0.5",
+    "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.1",
-    "typescript": "4.0"
+    "typescript": "^4.0.8"
   },
   "license": "MIT"
 }
