--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.5",
     "lodash": "^4.17.21",
@@ -17,7 +19,8 @@
     "next-images": "^1.8.1",
     "next-with-apollo": "^5.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-table": "^7.7.0"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^2.0.2",
