--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.3.20",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "bootstrap": "^4.6.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.5",
     "lodash": "^4.17.21",
@@ -19,6 +20,7 @@
     "next-images": "^1.8.1",
     "next-with-apollo": "^5.2.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-table": "^7.7.0"
   },
